# firecore-audio

./: Cargo.toml
builder/: Cargo.toml
builder/examples/: run.rs
builder/src/: lib.rs
examples/: test_audio.rs
src/: error.rs  lib.rs  music.rs  sound.rs
src/backend/: mod.rs
src/backend/kira/: context.rs  mod.rs  music.rs  sound.rs
src/backend/kira/context/: mod.rs  music.rs  sound.rs
src/backend/quadsnd/: mod.rs  music.rs
