[package]
name = "firecore-audio"
version = "0.1.0"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[features]
default = ["include"]
include = []

[dependencies]

### Audio variables

firecore-audio-lib = { git = "https://github.com/DoNotDoughnut/firecore-audio-lib" }

### Global, mutable variables

lazy_static = "1.4"
parking_lot = "0.11"
dashmap = "4.0"

### Audio libraries

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kira = { version = "0.4", default-features = false, features = ["ogg"] } # To - do: Figure out how to play audio without taking up lots of memory and storage space, add agb support/midi support
lewton = { version = "0.10.1" } # Included in kira

[target.'cfg(target_arch="wasm32")'.dependencies]
quad-snd = { git = "https://github.com/not-fl3/quad-snd" } # WebAudio



[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
kira = { version = "0.4", default-features = false, features = ["ogg"] }