[package]
name = "firecore-audio"
version = "0.4.0-alpha.1.1"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[features]
default = ["play"]
play = ["parking_lot", "ahash", "kira", "lewton"]

[dependencies]

### Audio variables

firecore-audio-lib = { git = "https://github.com/DoNotDoughnut/firecore-audio-lib" }
# firecore-audio-lib = { path = "../firecore-audio-lib" }

### Global, mutable variables

#lazy_static = { version = "1.4", optional = true }
parking_lot = { version = "0.11", optional = true }
ahash = { version = "0.7", optional = true }

### Audio libraries

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kira = { version = "0.4", default-features = false, features = ["ogg"], optional = true } # To - do: Figure out how to play audio without taking up lots of memory and storage space, add agb support/midi support
lewton = { version = "0.10.1", optional = true } # Included in kira

# [target.'cfg(target_arch="wasm32")'.dependencies]
# quad-snd = { git = "https://github.com/not-fl3/quad-snd", optional = true } # WebAudio